fixed circle img size on tablet view

--- a/css/main.css
+++ b/css/main.css
@@ -1311,6 +1311,10 @@ body {
     margin-top: 50px;
   }
 
+  .circle {
+    max-width: 60%;
+  }
+
 
   
   
